# NIST-SURF-HTGS-Generator

./: .gitignore  LICENSE.txt  README.md
ProjectTemplate/: CMakeLists.txt  README
ProjectTemplate/cmake-modules/: FindHTGS.cmake
ProjectTemplate/src/: main.cpp
ProjectTemplate/src/data/: ExampleData.h
ProjectTemplate/src/tasks/: ExampleTask.cpp  ExampleTask.h
app/: README.md  app.html  index.html  main.js  package.json
app/assets/icons/macOS/: icon.icns
app/css/: graph-creator.css  modals.css
app/js/: file-templates.js  form-fields.js  graph-creator.js  graph-data-and-processing.js  graph-generator.js  graph-menus.js  menu-data-and-processing.js
doc/: design-doc.tex
implementedExamples/TutorialOne/: CMakeLists.txt  TutorialOne.json
implementedExamples/TutorialOne/src/: main.cpp
implementedExamples/TutorialOne/src/data/: InputData.h  OutputData.h  SomeDataClass.h
implementedExamples/TutorialOne/src/tasks/: AddTask.cpp  AddTask.h
simpleTest/: CMakeLists.txt  FindNVTX.cmake  main.cpp
